<resources>

    <string name="app_name">Ironic++</string>

    <!-- Notification Strings -->
    <string name="notification_title">Ironic++ is running</string>
    <string name="notification_touch_to_open">Touch to open</string>
    
    <!-- Menu Strings -->
    <string name="start">start: stream</string>
     <string name="stop">stop</string>
    
    <!-- StartActivity Strings -->
     <string name="start_text">Working Electrodes (WE)</string>
     <string name="checkbox_metab1"> Glucose</string>
     <string name="checkbox_metab2"> Lactate</string>
     <string name="checkbox_metab3"> Bilirubin</string>
     <string name="checkbox_metab4"> Sodium</string>
     <string name="checkbox_metab5"> Potassium</string>
     <string name="checkbox_metab6"> Temperature</string>
     <string name="checkbox_metab7"> PH</string>
     <string name="button_start"> >> Start </string>
     <string name="calibration"> Calibration </string>
     <string name="chip_settings"> Chip Settings </string>
     <string name="button_security">Advanced Options</string>
     <string name="Calibration_prompt">Calibration files</string>
     <string name="minutes">Minutes</string>
     
    <!-- Login fragment -->
     <string name="LoginText">Access limited only with password:</string>
	 <string name="Password">Password</string>
	 <string name="adavanced_options">Advanced Options</string>
	 
	 <!-- Calibration Activity -->
	  <string name="zeroCommand">0) Conditioning : insert the PBS </string>
     <string name="firtCommand">1) Insert the low concentration</string>
	 <string name="secondCommand">2) Insert the high concentration</string>
	<string name="measuringTime">Set the measuring time</string>
	<string name="startStep"> >> Start </string>
	<string name="electrodes"> Electrodes </string>
	<string name="we1"> WE1 </string>
	<string name="we2"> WE2 </string>
	<string name="we3"> WE3 </string>
	<string name="we4"> WE4 </string>
	<string name="we5"> WE5 </string>
	<string name="we6"> WE6 </string>
	<string name="we7"> WE7 </string>
     
     <!-- MonitoringActivity Strings -->
     <string name="AddMeasurements">Add electrodes</string>

    <!-- ChartActivity Strings -->
    <string name="filtering">Filtering</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="load">Load</string>
    <string name="newfile">New</string>
    <string name="bt_not_connected">Not connected!</string>
    <string name="bt_connecting">Connecting…</string>
    <string name="bt_connected">Connected!</string>
    <string name="bt_disconnected">Disconnected!</string>
    <string name="service_disconnected">Service killed!</string>
    <string name="service_connected">Service created!</string>
    <string name="service_already_connected">Service already created!</string>
    <string name="bt_not_enabled_leaving">Bluetooth is not enabled</string>
    <string name="bt_not_available_connect_to_fake_device">Bluetooth not available, connecting to FakeDevice</string>
    <string name="storage_unavailable">Storage unavailable!</string>
    <string name="calibration_x_axis_legend">Concentration (M)</string>
    <string name="plot_x_axis_legend">Time (ms)</string>
    <string name="plot_y_axis_legend">Current (nA)</string>
    <string name="zoom_reset">Fit view to data</string>
    <string name="recordings"></string>
    
    <!-- ChipParametersActivity Strings -->
    <string name="StatusRegister">Status Register</string>
    <string name="ProtectionRegister">Protection Register</string>
    <string name="ControlRegister">ControlRegister</string>
    <string name="GAIN">GAIN</string>
    <string name="LOAD">LOAD</string>
    <string name="ReferenceControlRegister">ReferenceControlRegister</string>
    <string name="REF_SOURCE">REF_SOURCE</string>
    <string name="BIAS_SIGN">BIAS_SIGN</string>
    <string name="INT_Z">INT_Z</string>
    <string name="BIAS">BIAS</string>
    <string name="ModeControlRegister">Mode Control Register</string>
    <string name="FET_SHORT">FET_SHORT</string>
    <string name="OP_MODE">OP_MODE</string>
     
    <!-- MyFileListAdaptor Strings -->
    <string name="remove_label">remove</string>
    <string name="checkbox_label">CheckBox</string>
    <string name="remove_text">Remove?</string>
    <string name="yes">OK</string>
    <string name="no">Cancel</string>
     
    <!-- DeviceListActivity Strings -->
    <string name="scanning">Scanning for devices</string>
    <string name="none_paired">No devices have been paired yet</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_scanned_devices">Detected devices</string>
    <string name="button_scan">Refresh</string>
	 
    <!-- Service -->
    <string name="no_file_open">No file opened, nothing to clear</string>
    <string name="new_file_open">Existing file closed, ready for new acquisition</string>

    <!-- Filtering fragment -->
    <string name="filtering_options">Filtering options</string>
    <string name="data_validation_and_formatting">Data validation and formatting</string>
    <string name="data_filtering">Data filtering</string>
    <string name="plot_nr">Plot</string>
    <string name="toggleFilter">Activate or desactivate filtering</string>
    <string name="scale">Scale</string>
    <string name="scaleFactor">Scaling factor for display (y=a.x)</string>
    <string name="offset">Offset</string>
    <string name="offsetFactor">Offset factor for display (y=x+b)</string>
    <string name="max">Max</string>
    <string name="maxValidValue">Maximal valid value</string>
    <string name="min">Min</string>
    <string name="minValidValue">Minimal valid value</string>
   
    <string-array name="filters_array">
        <!-- The order should match the index defined in the Filter class -->
        <item>Moving average</item>
        <item>IIR</item>
        <item>Kalman</item>
        <item>Median value</item>
        <!-- The order should match the index defined in the Filter class -->
        </string-array>
    <string name="filter_range">Filtering range (10&#8211;200)</string>
    <string name="filter_apply">Apply</string>
    <string name="filter_cancel">Cancel</string>
    <string name="filter_saved">Filtering settings saved</string>
    <string name="filter_canceled">Modifications canceled</string>
    
</resources>