<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bobbles"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/electrodes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/electrodes"
            android:textColor="@color/white"
            android:textSize="30sp" />

            <RadioGroup
                android:id="@+id/radioButtonGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/we1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we1"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/we2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we2"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/we3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we3"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/we4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we4"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/we5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we5"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/we6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we6"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/we7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we7"
                    android:textColor="@color/white" />
            </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Command0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/zeroCommand"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/sublayout0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/Time0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:hint="@string/measuringTime"
                android:inputType="number"
                android:textSize="20sp" />

            <Button
                android:id="@+id/start0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:onClick="doStep"
                android:text="@string/startStep"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Command1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/firtCommand"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/sublayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/Time1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:hint="@string/measuringTime"
                android:inputType="number"
                android:textSize="20sp" />

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:onClick="doStep"
                android:text="@string/startStep"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/Command2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/secondCommand"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/sublayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/Time2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:hint="@string/measuringTime"
                android:inputType="number"
                android:textSize="20sp" />

            <Button
                android:id="@+id/start2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:onClick="doStep"
                android:text="@string/startStep"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" >

        <com.androidplot.xy.XYPlot
            android:id="@+id/mySimpleXYPlot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            androidPlot.domainLabel="@string/calibration_x_axis_legend"
            androidPlot.rangeLabel="@string/plot_y_axis_legend"
            androidPlot.title="Calibration curve" />
    </LinearLayout>

</LinearLayout>
