<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/colorful_backgrounds"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/status_register"
            style="@style/CheckBox_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_weight="1"
            android:text="@string/StatusRegister" />

        <CheckBox
            android:id="@+id/protection_register"
            style="@style/CheckBox_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="1"
            android:textColor="@color/text_color"
            android:text="@string/ProtectionRegister" />
    </LinearLayout>

    <TextView
        android:id="@+id/ControlRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/ControlRegister"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:background="@color/text_color" />

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/gain_button"
             style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/GAIN" />

        <TextView
            android:id="@+id/valueGain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/Rload_button"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LOAD" />

        <TextView
            android:id="@+id/valueLOAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/ReferenceControlRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
         android:layout_marginRight="50dp"
        android:text="@string/ReferenceControlRegister"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:background="@color/text_color" />

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/ref_source_checkbox"
            style="@style/CheckBox_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:text="@string/REF_SOURCE" />

        <CheckBox
            android:id="@+id/bias_sign_checkbox"
            style="@style/CheckBox_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:text="@string/BIAS_SIGN" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/int_z_button"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/INT_Z" />

        <TextView
            android:id="@+id/valueINT_Z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/bias_button"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BIAS" />

        <TextView
            android:id="@+id/valueBIAS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/ModeControlRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/ModeControlRegister"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:background="@color/text_color"/>

    <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/fet_short_checkbox"
            style="@style/CheckBox_settings"
            android:layout_width="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:text="@string/FET_SHORT" />

        <Button
            android:id="@+id/op_mode_button"
             style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/OP_MODE" />

        <TextView
            android:id="@+id/valueOPMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </LinearLayout>
    
       <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="30dp">
        
    <ch.epfl.lsi.ironICpp.MultitouchPlot
        android:id="@+id/multitouchPlot"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_margin="0px"
        android:layout_weight="1"
        androidplot.domainLabel="@string/plot_x_axis_legend"
        androidplot.graphWidget.domainLabelPaint.textSize="@dimen/domain_tick_label_font_size"
        androidplot.graphWidget.domainOriginLabelPaint.textSize="@dimen/domain_tick_label_font_size"
        androidplot.graphWidget.marginBottom="20dp"
        androidplot.graphWidget.marginLeft="20dp"
        androidplot.graphWidget.marginRight="20dp"
        androidplot.graphWidget.marginTop="10dp"
        androidplot.graphWidget.rangeLabelPaint.textSize="@dimen/range_tick_label_font_size"
        androidplot.graphWidget.rangeOriginLabelPaint.textSize="@dimen/range_tick_label_font_size"
        androidplot.legendWidget.heightMetric.value="28dp"
        androidplot.legendWidget.iconSizeMetrics.heightMetric.value="18dp"
        androidplot.legendWidget.iconSizeMetrics.widthMetric.value="18dp"
        androidplot.legendWidget.positionMetrics.anchor="right_bottom"
        androidplot.legendWidget.textPaint.textSize="@dimen/legend_text_font_size"
        androidplot.plotMarginBottom="0dp"
        androidplot.plotMarginLeft="0dp"
        androidplot.plotMarginRight="0dp"
        androidplot.plotMarginTop="0dp"
        androidplot.rangeLabel="@string/plot_y_axis_legend" />

</LinearLayout>

</LinearLayout>